# ADML

./: Random Forest Algorithm.py  bagged classifier for brest cancer.py  bossting in iris.py  corr.py  pca in breast cancer.py
BB/: bb.py
Feed forward network/: pyproject.toml
Feed forward network/data/: test_datas.py
Feed forward network/src/: feedforwardnetwork.py
Feed forward network/tests/: feed_forward_network.py
LDA/: pyproject.toml
LDA/src/LDA/: ldatraining.py
LDA/tests/: test_lda.py
perceptron/: pyproject.toml
perceptron/data/: training_data.py
perceptron/src/perceptron/: main.py  perceptron_with_data.py
perceptron/tests/: test_perceptron.py  test_perceptron_with_diabetic_data.py
