[tool.poetry]
name = "perceptron"
version = "0.1.0"
description = ""
authors = ["prakashr7d <prakashr7d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
